# argentum-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
argentumbot/: .env_sample  main.py  settings.py
argentumbot/botcommands/: commands.py  replies_sample.py
src/: main.rs
